Fix img overflow

--- a/html-css-beginner/styles.css
+++ b/html-css-beginner/styles.css
@@ -3,6 +3,10 @@ body {
     color: white;
 }
 
+img {
+    max-width: 100%;
+}
+
 #first_div {
     background: pink;
 }
